<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/backFloatingButton_signup"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="163dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.04"
        android:text="@string/signup_email"
        android:textColor="@color/blackLight"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_description_textview"/>

    <TextView
        android:id="@+id/signup_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.04"
        android:text="@string/sign_up_description"
        android:textColor="@color/grayBasic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <com.doif.ccbebe.util.DefaultEdittext
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        app:hint="@string/input_email"
        app:inputType="email"
        app:layout_constraintBottom_toTopOf="@id/password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.doif.ccbebe.util.DefaultEdittext
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        app:hint="@string/input_password"
        app:inputType="password"
        app:layout_constraintBottom_toTopOf="@id/check_password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.doif.ccbebe.util.DefaultEdittext
        android:id="@+id/check_password_edittext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        app:hint="@string/check_password"
        app:inputType="password"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bc_green_button"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:gravity="center"
        android:letterSpacing="-0.04"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>



