<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/backFloatingButton_signin"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="163dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.04"
        android:text="@string/sign_in_email"
        android:textColor="@color/blackLight"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signin_description_textview"/>

    <TextView
        android:id="@+id/signin_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.04"
        android:text="@string/sign_in_description"
        android:textColor="@color/grayBasic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <com.doif.ccbebe.util.DefaultEdittext
        android:id="@+id/sign_in_email_edittext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        app:hint="@string/input_email"
        app:inputType="email"
        app:layout_constraintBottom_toTopOf="@id/sign_in_password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.doif.ccbebe.util.DefaultEdittext
        android:id="@+id/sign_in_password_edittext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        app:hint="@string/input_password"
        app:inputType="password"
        app:layout_constraintBottom_toTopOf="@id/signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bc_green_button"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:gravity="center"
        android:letterSpacing="-0.04"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/forgot_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/blackLight"
        android:letterSpacing="-0.05"
        android:text="@string/forgot_email"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/signin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>



