<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_out_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="141dp"
    android:orientation="vertical"
    android:background="@drawable/bc_default_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sign_out_description"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textSize="20sp"
        android:textColor="@color/blackLight"
        android:letterSpacing="-0.05"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button
            android:id="@+id/sign_out_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bc_cancel_button"
            android:text="@string/cancel"
            android:fontFamily="@font/notosanscjkkr_medium"
            android:textSize="14sp"
            android:textColor="@color/blackLight"
            android:letterSpacing="-0.05"
            android:gravity="center"/>

        <Button
            android:id="@+id/sign_out_admit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bc_sign_out_button"
            android:text="@string/sign_out"
            android:fontFamily="@font/notosanscjkkr_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:letterSpacing="-0.05"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
